test/lattests/extensions/objects1/bad/inheritanceCycle.lat
class a extends e {

}

class b extends a {

}

class c extends b {

}

class d extends c {

}

class e extends d {

}

int main(){return 0;}